--- a/PinballNX-PC/PinballNX-PC.vcxproj.filters
+++ b/PinballNX-PC/PinballNX-PC.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="SceneElement.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SoundM.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="balllock.h">
@@ -126,6 +129,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="SceneElement.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SoundM.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
